fix(insta): light/dark mode toggle

--- a/styles/instagram/catppuccin.user.css
+++ b/styles/instagram/catppuccin.user.css
@@ -108,7 +108,6 @@
       --ig-stroke-prism: #rgbify(@crust) [];
       scrollbar-color: @accent-color @crust;
     }
-
     #splash-screen {
       background-color: @base !important;
     }
@@ -225,6 +224,12 @@
     }
     span[data-bloks-name="bk.components.TextSpan"] {
       color: @accent-color !important;
+    }
+    .xs7f9wi {
+      background-color: @mantle !important;
+    }
+    .x1d72o {
+      background-color: @surface0;
     }
     /* Log In With Facebook text */
     ._ab37 {
